[tool.poetry]
name = "repl_python3_greninja"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
giphy-client = "^1.0.0"
discord = "^1.0.1"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
DiscordUtils = "^1.3.4"
qm-scripts = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
